# amplifier-bundle-projector

./: .gitignore  IDEAS.md  bundle.md
agents/: project-analyst.md  strategy-advisor.md
behaviors/: projector-policy.yaml  projector.yaml
context/: projector-instructions.md  strategy-awareness.md
data/default-strategies/: antagonistic-review.yaml  identity-map.yaml  incremental-validation.yaml  local-working-notes.yaml  project-awareness.yaml  shadow-testing.yaml  subagent-first.yaml  test-before-presenting.yaml
docs/: ARCHITECTURE.md
modules/hooks-projector/: pyproject.toml
modules/hooks-projector/amplifier_module_hooks_projector/: __init__.py  hook.py
modules/hooks-projector/projector_hooks/: hook.py
modules/tool-projector/: pyproject.toml
modules/tool-projector/amplifier_module_tool_projector/: __init__.py  tool.py
modules/tool-projector/projector_tool/: __init__.py  tool.py
