[project]
name = "amplifier-hooks-projector"
version = "0.1.0"
description = "Session hooks for Amplifier Projector - strategy injection and outcome capture"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["projector_hooks"]
