[project]
name = "amplifier-module-hooks-projector"
version = "0.1.0"
description = "Session hooks for Amplifier Projector - strategy injection and outcome capture"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.entry-points."amplifier.modules"]
hooks-projector = "amplifier_module_hooks_projector:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_projector"]
