[project]
name = "amplifier-tool-projector"
version = "0.1.0"
description = "Project management and strategy tool for Amplifier Projector"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["projector_tool"]
